--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF/bin/
-/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF/obj/
+/Amazon.CloudWatch.EMF/bin/
+/Amazon.CloudWatch.EMF/obj/
+/Amazon.CloudWatch.EMF.Tests/obj/
+/Amazon.CloudWatch.EMF.Tests/obj/
+/.DS_Store
 /.idea/
