--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@
 /Amazon.CloudWatch.EMF.Tests/obj/
 /Amazon.CloudWatch.EMF.Tests/.DS_Store
 /.idea/
-
+/Amazon.CloudWatch.EMF.Tests/bin/
+.DS_Store
+/.vs/
