--- a/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
+++ b/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
         <PrivateAssets>all</PrivateAssets>
