--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 /Amazon.CloudWatch.EMF/obj/
 /Amazon.CloudWatch.EMF/.DS_Store
 /Amazon.CloudWatch.EMF.Tests/obj/
-/Amazon.CloudWatch.EMF.Tests/obj/
+/Amazon.CloudWatch.EMF.Tests/bin/
 /Amazon.CloudWatch.EMF.Tests/.DS_Store
 /Amazon.CloudWatch.EMF.IntegrationTests/obj/
-/Amazon.CloudWatch.EMF.IntegrationTests/obj/
+/Amazon.CloudWatch.EMF.IntegrationTests/bin/
 /Amazon.CloudWatch.EMF.IntegrationTests/.DS_Store
 /.idea/
-/Amazon.CloudWatch.EMF.Tests/bin/
+
 .DS_Store
 /.vs/
+
