--- a/Amazon.CloudWatch.EMF.Tests/Amazon.CloudWatch.EMF.Tests.csproj
+++ b/Amazon.CloudWatch.EMF.Tests/Amazon.CloudWatch.EMF.Tests.csproj
@@ -13,4 +13,8 @@
         <PackageReference Include="coverlet.collector" Version="1.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
+    </ItemGroup>
+
 </Project>
