--- a/Amazon.CloudWatch.EMF.Tests/Amazon.CloudWatch.EMF.Tests.csproj
+++ b/Amazon.CloudWatch.EMF.Tests/Amazon.CloudWatch.EMF.Tests.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="NFluent" Version="2.7.0" />
         <PackageReference Include="xunit" Version="2.4.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
         <PackageReference Include="coverlet.collector" Version="1.2.0" />
@@ -15,6 +16,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Config" />
     </ItemGroup>
 
 </Project>
