--- a/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
+++ b/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
@@ -2,16 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-		<CodeAnalysisRuleSet></CodeAnalysisRuleSet>
+		<CodeAnalysisRuleSet>Amazon.CloudWatch.EMF.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-      <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
+      <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
