--- a/Amazon.CloudWatch.EMF.Tests/Amazon.CloudWatch.EMF.Tests.csproj
+++ b/Amazon.CloudWatch.EMF.Tests/Amazon.CloudWatch.EMF.Tests.csproj
@@ -7,21 +7,28 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Config\**" />
+      <EmbeddedResource Remove="Config\**" />
+      <None Remove="Config\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="AutoFixture" Version="4.14.0" />
         <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.14.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-        <PackageReference Include="NFluent" Version="2.7.0" />
-        <PackageReference Include="xunit" Version="2.4.0" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-        <PackageReference Include="coverlet.collector" Version="1.2.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+        <PackageReference Include="xunit" Version="2.4.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="coverlet.collector" Version="1.3.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Config" />
     </ItemGroup>
 
 </Project>
