--- a/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
+++ b/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
@@ -1,14 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <PackageId>Amazon.CloudWatch.EMF</PackageId>
+        <VersionPrefix>0.1.0</VersionPrefix>
+        <Authors>AWS Web Services</Authors>
+    </PropertyGroup>
+
+    <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-		<CodeAnalysisRuleSet>Amazon.CloudWatch.EMF.ruleset</CodeAnalysisRuleSet>
+        <CodeAnalysisRuleSet>Amazon.CloudWatch.EMF.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-      <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.8" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
