--- a/cdk/package.json
+++ b/cdk/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@aws-cdk/aws-codebuild": "^1.74.0",
+    "@aws-cdk/aws-codepipeline": "^1.74.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.74.0",
     "@aws-cdk/aws-iam": "^1.74.0",
     "@aws-cdk/core": "1.74.0",
     "source-map-support": "^0.5.16"
