--- a/buildspecs/buildspec.canary.yml
+++ b/buildspecs/buildspec.canary.yml
@@ -9,7 +9,7 @@ env:
 phases:
   install:
     runtime-versions:
-      dotnet: 3.x
+      dotnet: 3.1
     commands:
       # start docker
       # https://docs.aws.amazon.com/codebuild/latest/userguide/sample-docker-custom-image.html#sample-docker-custom-image-files
