add dotnet --version comand to buildspec

--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -18,6 +18,7 @@ phases:
       - npm install
   build:
     commands:
+      - dotnet --version
       - pwd && ./scripts/start-agent.sh
       - dotnet restore
       - dotnet build
