--- a/Amazon.CloudWatch.EMF.Canary/Amazon.CloudWatch.EMF.Canary.csproj
+++ b/Amazon.CloudWatch.EMF.Canary/Amazon.CloudWatch.EMF.Canary.csproj
@@ -8,4 +8,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+  </ItemGroup>
 </Project>
