re-organize repo

--- a/examples/Amazon.CloudWatch.EMF.Web/Amazon.CloudWatch.EMF.Web.csproj
+++ b/examples/Amazon.CloudWatch.EMF.Web/Amazon.CloudWatch.EMF.Web.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
+    <ProjectReference Include="..\..\src\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
   </ItemGroup>
 
 </Project>
