--- a/examples/Amazon.CloudWatch.EMF.ConsoleApp/Amazon.CloudWatch.EMF.ConsoleApp.csproj
+++ b/examples/Amazon.CloudWatch.EMF.ConsoleApp/Amazon.CloudWatch.EMF.ConsoleApp.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
+    <ProjectReference Include="..\..\src\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
   </ItemGroup>
 
 </Project>
