--- a/examples/Amazon.CloudWatch.EMF.Lambda/Amazon.CloudWatch.EMF.Lambda.csproj
+++ b/examples/Amazon.CloudWatch.EMF.Lambda/Amazon.CloudWatch.EMF.Lambda.csproj
@@ -9,6 +9,6 @@
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
+    <ProjectReference Include="..\..\src\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
   </ItemGroup>
 </Project>
