--- a/examples/Amazon.CloudWatch.EMF.ConsoleApp/Amazon.CloudWatch.EMF.ConsoleApp.csproj
+++ b/examples/Amazon.CloudWatch.EMF.ConsoleApp/Amazon.CloudWatch.EMF.ConsoleApp.csproj
@@ -9,4 +9,9 @@
     <ProjectReference Include="..\..\src\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
