Separate Web project into separate package
Fix tests

--- a/src/Amazon.CloudWatch.EMF.Web/Amazon.CloudWatch.EMF.Web.csproj
+++ b/src/Amazon.CloudWatch.EMF.Web/Amazon.CloudWatch.EMF.Web.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
+    <ProjectReference Include="..\Amazon.CloudWatch.EMF\Amazon.CloudWatch.EMF.csproj" />
   </ItemGroup>
 
 </Project>
