Set IncludeSymbols in csproj

--- a/src/Amazon.CloudWatch.EMF.Web/Amazon.CloudWatch.EMF.Web.csproj
+++ b/src/Amazon.CloudWatch.EMF.Web/Amazon.CloudWatch.EMF.Web.csproj
@@ -13,6 +13,7 @@
     <PackageTags>AWS Amazon cloud CloudWatch Metrics EMF</PackageTags>
     <PackageIconUrl>http://media.amazonwebservices.com/aws_singlebox_01.png</PackageIconUrl>
     <IsPackable>true</IsPackable>
+    <IncludeSymbols>true</IncludeSymbols>
   </PropertyGroup>
 
   <ItemGroup>
