--- a/src/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
+++ b/src/Amazon.CloudWatch.EMF/Amazon.CloudWatch.EMF.csproj
@@ -11,6 +11,7 @@
         <RepositoryUrl>https://github.com/awslabs/aws-embedded-metrics-dotnet</RepositoryUrl>
         <PackageTags>AWS Amazon cloud CloudWatch Metrics EMF</PackageTags>
         <PackageIconUrl>http://media.amazonwebservices.com/aws_singlebox_01.png</PackageIconUrl>
+        <IncludeSymbols>true</IncludeSymbols>
     </PropertyGroup>
 
     <PropertyGroup>
