ci: print dotnet and nuget versions used in pipelines

--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -17,6 +17,8 @@ phases:
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
   build:
     commands:
+      - dotnet --info
+      - nuget
       - pwd && ./scripts/start-agent.sh
       - dotnet restore
       - dotnet build
