--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -9,7 +9,7 @@ env:
 phases:
   install:
     runtime-versions:
-      dotnet: 3.1
+      dotnet: 3.1.x
     commands:
       # start docker
       # https://docs.aws.amazon.com/codebuild/latest/userguide/sample-docker-custom-image.html#sample-docker-custom-image-files
