--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -18,7 +18,7 @@ phases:
   build:
     commands:
       - dotnet --version
-      - curl -s https://dot.net/v1/dotnet-install.sh | bash -s -- -c 3.1
+      - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin -c 3.1
       - dotnet --version
       - exit 0
 #      - pwd && ./scripts/start-agent.sh
