ci: update other buildspecs and print nuget version

--- a/buildspecs/buildspec.release.yml
+++ b/buildspecs/buildspec.release.yml
@@ -11,5 +11,9 @@ phases:
       dotnet: 3.1
   build:
     commands:
+      # install the latest patch version of 3.1
+      - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin -c 3.1
+      - dotnet --version
+      - dotnet nuget help | head -1
       - dotnet restore
       - ./scripts/publish-package.sh
