--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -20,6 +20,7 @@ phases:
       # install the latest patch version of 3.1
       - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin -c 3.1
       - dotnet --version
+      - dotnet nuget help | head -1
       - pwd && ./scripts/start-agent.sh
       - dotnet restore
       - dotnet build
