ci: print nuget version correctly

--- a/buildspecs/buildspec.canary.yml
+++ b/buildspecs/buildspec.canary.yml
@@ -20,5 +20,5 @@ phases:
       # install the latest patch version of 3.1
       - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin -c 3.1
       - dotnet --version
-      - dotnet nuget help
+      - dotnet nuget --version
       - ./scripts/deploy-canary.sh
