--- a/buildspecs/buildspec.canary.yml
+++ b/buildspecs/buildspec.canary.yml
@@ -17,8 +17,5 @@ phases:
       - timeout 15 sh -c "until docker info; do echo .; sleep 1; done"
   build:
     commands:
-      # install the latest patch version of 3.1
-      - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin -c 3.1
-      - dotnet --version
-      - dotnet nuget --version
+      - ./scripts/install-dotnet.sh
       - ./scripts/deploy-canary.sh
