ci: restore buildspec commands to how they were

--- a/buildspecs/buildspec.release.yml
+++ b/buildspecs/buildspec.release.yml
@@ -5,6 +5,8 @@ env:
     AWS_REGION: us-west-2
   parameter-store:
     NUGET_API_KEY: NuGetAPIKey
+  secrets-manager:
+    NUGET_API_KEY: "NuGetCredentials:API_KEY"
 phases:
   install:
     runtime-versions:
