--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -6,8 +6,6 @@ env:
   parameter-store:
     AWS_ACCESS_KEY_ID: AccessKey
     AWS_SECRET_ACCESS_KEY: SecretKey
-  secrets-manager:
-    NUGET_API_KEY: "NuGetCredentials:API_KEY"
 phases:
   install:
     runtime-versions:
@@ -20,8 +18,7 @@ phases:
   build:
     commands:
       - ./scripts/install-dotnet.sh
-#      - pwd && ./scripts/start-agent.sh
+      - pwd && ./scripts/start-agent.sh
       - dotnet restore
-      - ./scripts/publish-package.sh
-#      - dotnet build
-#      - dotnet test
+      - dotnet build
+      - dotnet test
