Revert "ci(wip): edit buildspec to test changes"
This reverts commit 28627309e2f2e9413c821a864b59dcb04afa7af6.

--- a/buildspecs/buildspec.yml
+++ b/buildspecs/buildspec.yml
@@ -3,11 +3,9 @@ version: 0.2
 env:
   variables:
     AWS_REGION: us-west-2
-    ROLE_ARN: arn:aws:iam::582595803497:role/CloudWatch-Logs-EMF-build-role
   parameter-store:
     AWS_ACCESS_KEY_ID: AccessKey
     AWS_SECRET_ACCESS_KEY: SecretKey
-    SECRET_ARN: SecretArnNuget
 phases:
   install:
     runtime-versions:
@@ -20,8 +18,7 @@ phases:
   build:
     commands:
       - ./scripts/install-dotnet.sh
-#      - pwd && ./scripts/start-agent.sh
+      - pwd && ./scripts/start-agent.sh
       - dotnet restore
-      - ./scripts/publish-package.sh
-#      - dotnet build
-#      - dotnet test
+      - dotnet build
+      - dotnet test
