--- a/buildspecs/buildspec.release.yml
+++ b/buildspecs/buildspec.release.yml
@@ -4,16 +4,14 @@ env:
   variables:
     AWS_REGION: us-west-2
   parameter-store:
-    NUGET_API_KEY: NuGetAPIKey
+    ROLE_ARN: NugetCrossAccountArn
+    SECRET_ARN: SecretArnNuget
 phases:
   install:
     runtime-versions:
       dotnet: 3.1
   build:
     commands:
-      # install the latest patch version of 3.1
-      - curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin -c 3.1
-      - dotnet --version
-      - dotnet nuget --version
+      - ./scripts/install-dotnet.sh
       - dotnet restore
       - ./scripts/publish-package.sh
