--- a/examples/Amazon.CloudWatch.EMF.Examples.Web/Amazon.CloudWatch.EMF.Examples.Web.csproj
+++ b/examples/Amazon.CloudWatch.EMF.Examples.Web/Amazon.CloudWatch.EMF.Examples.Web.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'Amazon.CloudWatch.EMF.Web' " />
   <ItemGroup>
     <ProjectReference Include="..\..\src\Amazon.CloudWatch.EMF.Web\Amazon.CloudWatch.EMF.Web.csproj" />
   </ItemGroup>
