--- a/scripts/cwagent/Dockerfile
+++ b/scripts/cwagent/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get update &&  \
     apt-get install -y ca-certificates curl && \
     rm -rf /var/lib/apt/lists/*
 
-RUN curl -O https://s3.amazonaws.com/amazoncloudwatch-agent/ubuntu/amd64/latest/amazon-cloudwatch-agent.deb && \
+RUN curl -O https://s3.amazonaws.com/amazoncloudwatch-agent/ubuntu/amd64/1.247354.0b251981/amazon-cloudwatch-agent.deb && \
     dpkg -i -E amazon-cloudwatch-agent.deb && \
     rm -rf /tmp/* && \
     rm -rf /opt/aws/amazon-cloudwatch-agent/bin/amazon-cloudwatch-agent-config-wizard && \
