fix docker image name

--- a/tests/Amazon.CloudWatch.EMF.Canary/Dockerfile
+++ b/tests/Amazon.CloudWatch.EMF.Canary/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/aspnet:6.0
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 COPY bin/Release/net6.0/publish/ App/
 WORKDIR /App
 ENTRYPOINT ["dotnet", "Amazon.CloudWatch.EMF.Canary.dll"]
